# Solar-RS485-Monitor

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.ko.md  README.md  inverter_collector.py  pyproject.toml  requirements.txt  solar-rs485-monitor.conf.template
.github/: FUNDING.yml  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/workflows/: pypi-publish.yml
packaging/systemd/: rs485-tcp-bridge.service  solar-rs485-monitor-dashboard.service  solar-rs485-monitor.service
src/solar_rs485_monitor/: __init__.py  collector.py  dashboard.py  solar-rs485-monitor.conf.template  version.py
src/solar_rs485_monitor/alerts/: __init__.py  dispatcher.py  message.py  telegram.py
src/solar_rs485_monitor/assets/: crypto-js-4.2.0.min.js
src/solar_rs485_monitor/protocols/: __init__.py  base.py  inoelectric_iepvs_g1_g2.py
src/solar_rs485_monitor/sinks/: __init__.py  google_sheets.py  mariadb.py  opensearch.py  sqlite.py  supabase.py  thingspeak.py
tests/: test-capture_raw_frames.py  test_alert_channels.py  test_alert_messages.py  test_collector_core.py  test_collector_sinks.py  test_dashboard_generation.py  test_protocols.py  test_sinks_offline.py  test_telegram_alerts.py
tools/: capture_raw_frames.py
